starttech-application/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: muchtodo-api
  namespace: muchtodo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: muchtodo-api

  template:
    metadata:
      labels:
        app: muchtodo-api

    spec:
      containers:
        - name: muchtodo-api

          image: 027252077884.dkr.ecr.eu-west-1.amazonaws.com/muchtodo-api:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health
              port: 8080

            initialDelaySeconds: 10

            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080

            initialDelaySeconds: 30

            periodSeconds: 10

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
