starttech-application/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: muchtodo-service
  namespace: muchtodo
spec:

  selector:
    app: muchtodo-api

  ports:

    - protocol: TCP

      port: 80

      targetPort: 8080

  type: ClusterIP
