starttech-application/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: muchtodo-ingress
  namespace: muchtodo

  annotations:

    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    alb.ingress.kubernetes.io/healthcheck-path: /health

    alb.ingress.kubernetes.io/success-codes: "200"

spec:

  ingressClassName: alb

  rules:

    - http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: muchtodo-service

                port:

                  number: 80
